--- a/cart.css
+++ b/cart.css
@@ -8,7 +8,15 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
-
+.summa{
+  display: inline-flex;
+}
+.navi1{
+  display: inline-flex;
+}
+.navi1 ul li{
+  list-style: none;
+}
 .clearfix {
   content: "";
   display: table;
